# setup-environment-aalaniz-unc

./: CMakeLists.txt  Doxyfile
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/dynamic_lib/: CMakeLists.txt
lib/dynamic_lib/include/: dynamic.h
lib/dynamic_lib/src/: dynamic.c
lib/static_lib/: CMakeLists.txt
lib/static_lib/include/: static.h
lib/static_lib/src/: static.c
src/: logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
